# SORTING_VISUALISATION

./: README.md
sortingWithMulitThreading/: CMakeLists.txt  decleration.h  main.cpp  soringAlghoritms.cpp
sortingWithMulitThreading/cmake/: FindSDL2.cmake
sortingWithMulitThreading/printing/: printingVisual.cpp  printingVisualEss.h
